2005-05-04  Alp Toker  <alp@atoker.com>

	* Commands/CommandToolButton.cs: enable UseUnderline. The Gtk+ docs
	say "Labels shown on tool buttons never have mnemonics on them" so
	this effectively just hides the underscore.

2005-04-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Commands/CommandInfo.cs: Forgot to copy the description from the
	command.

2005-04-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Command/*: New command infrastructure.
	* Makefile.am: Added new command files.

2005-04-17  John Luke  <john.luke@gmail.com>

	* Makefile.am: fix distcheck

2005-04-16  John Luke  <john.luke@gmail.com>

	* Tree/TreeView.cs:
	* FileBrowser/FileBrowser.cs:
	* TabLabel/TabLabel.cs: fix warnings mostly about obselete
	Gtk# API

2005-03-15  John Luke  <john.luke@gmail.com>

	* FileBrowser/FileBrowser.cs: make enum internal
	so it will compile with latest mcs

2005-01-31  John Luke  <john.luke@gmail.com>

	* FileBrowser/FileBrowser.cs: use ToolItem
	instead of action crapola

2005-01-27  John Luke  <john.luke@gmail.com>

	* Makefile.am:
	* FileBrowser/FileBrowser.cs: use Gnome.Vfs
	* FolderDialog/BaseFileEntry.cs: add new keyword
	to prevent warning

2005-01-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Tree/TreeNodeCollection.cs: Save some memory.

2004-12-01  John Luke  <john.luke@gmail.com>

	* FileBrowser/FileBrowser.cs: port to GtkAction
	some other small updates
	* Navbar/Navbar.cs: port to GtkAction

2004-12-01  John Luke  <john.luke@gmail.com>

	* FileSelector/FileSelector.cs: modified patch
	from Rubens Ramos <rubensr@users.sourceforge.net>
	to use the default path from the property service
	and make sure it exists before adding it as a bookmark

2004-12-01  John Luke  <john.luke@gmail.com>

	* FileSelector/FileSelector.cs: improve this to take advantage
	of the FileChooser and remove my old hacks that were likely buggy
	use a switch for adding the buttons
	add ~/Projects as a MD specific bookmark

2004-10-29  Todd Berman  <tberman@off.net>
