@@ -1,3 +1,8 @@
+2005-05-06  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Commands/CommandManager.cs: Catch and report exceptions thrown
+	while dispatching commands.
+
 2005-05-04  Alp Toker  <alp@atoker.com>
 
 	* Commands/CommandToolButton.cs: enable UseUnderline. The Gtk+ docs
